Border is removed and overlapping issue with table resolved

--- a/client-app/notice-board/notice-board.less
+++ b/client-app/notice-board/notice-board.less
@@ -3,6 +3,7 @@
 	width: 100%;
 	bottom: 1px;
 	min-width: 715px;
+	z-index: 1000;
 
 	.header-container {
 		width: 100%;
@@ -46,7 +47,6 @@
 	bottom: 1px;
 	top: 103px; /*Height of Systembar + height of Menubar*/
 	right: 1px;
-	border: 1px solid #305091;
 	z-index: 10000;
 
 	.header-container {
